Add quarkus.hibernate-orm.database.orm-compatibility.version